--- a/style.css
+++ b/style.css
@@ -1,23 +1,13 @@
-
-        #ne {
-            color: green;
-            font-size: 50px;
-            text-align: center;
-            vertical-align: middle;
-            height: 100%;
-            padding-top: 300px;
-        }
-        #cont {
-            font-family: arial;
-            font-size: 30px;
-            text-align: right
-        }
-        #intr {
-            font-size: 30px;
-            color: blue;
-            text-align: center
-        }
-        #le {
-            font-size: 20px;
-            color: red
-        }
+#ne { color: green; 
+      font-size: 50px;
+      text-align: center; 
+      vertical-align: middle;
+      height: 100%;
+      padding-top: 300px;
+} 
+#cont { font-family: arial; font-size: 30px; text-align: right } 
+#intr { font-size: 30px; color: blue; text-align: center }
+#le { font-size: 20px; color: red }
+body{ background-color:FF8C00 } 
+#cont div{ background-color:00FA9A }
+#intr div{ background-color:00FA9A }
